View/stylesheet.css
body {
    margin-left: 0;
    margin-right: 0;
    /* animation: fadeInAnimation ease 2sec;
    animation-iteration-count: 1;
    animation-fill-mode: forwards; */
}

/* @keyframes fadeInAnimation {
    0% {
        opacity: 0;
    }
    100%{
        opacity: 1;
    }
} */

.navbar {
    background-color: #000b82;
    overflow: hidden;
}

.navbar a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    font-family: 'Roboto Condensed', sans-serif;
}

.copyright-line {
    text-align: center;
    padding-left: 10rem;
    padding-right: 10rem;
    margin-left: 1rem ;
    margin-right: 1rem ;
    font-family: 'Roboto Condensed', sans-serif;
    border-top: thick double black;
}



ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    color: black;
}

.navbar a.active {
    background-color: #04AA6D;
    color: white;
}

.navbar a:hover {
    background-color: #030730;
    transition: 0.4s;
}

/* li {
    display: inline;
    text-align: center;
} */

.main-header {
    color: rgb(36, 35, 34);
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 5rem;
    margin-bottom: 0.5rem;
}

.secondary-header {
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    margin-top: 0.5rem
}

.body-title {
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 3rem;
    margin-top: 50px;
}

p {
    margin-left: 10px;
    margin-right: 10px;
    padding-left: 4rem;
    padding-right: 4rem;
    font-family: 'Roboto Condensed', sans-serif;
}

.github-button {
    text-align: center;
    font-size: 15pt;
    font-family: 'Roboto Condensed', sans-serif;
}

.github-button a {
    text-decoration: none;
    color: black;
    padding-bottom: 5rem;
}

.github-button a:hover {
    text-decoration: underline;
    color: #000b82;
}

.github-button a:visited {
    color: maroon;
}

.socials {
    /* columns: 2; */
    text-align: center;
    font-size: 15pt;
    font-family: 'Roboto Condensed', sans-serif;
    padding-bottom: 3rem;
}

.socials a {
    text-decoration: none;
    color: black;
}

.socials a:visited {
    color: maroon;
}

.socials a:hover {
    text-decoration: underline;
    color: #000b82;
}

.education {
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    padding-bottom: 3rem;
    margin-left: 5rem;
    margin-right: 5rem;
    border-bottom: thick double black;
}

.education p {
    text-align: justify;
    padding-left: 5rem;
    padding-right: 5rem;
}

.work-history {
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    border-bottom: thick double black;
    margin-left: 5rem;
    margin-right: 5rem;
    padding-bottom: 3rem;
}

.work-history ul {
    padding-bottom: 2rem;
}

.work-history li {
    text-align: justify;
    padding-left: 5rem;
    padding-right: 5rem;
}

.certifications {
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    border-bottom: thick double black;
    margin-left: 5rem;
    margin-right: 5rem;
    padding-bottom: 3rem;
}

.certifications p {
    text-align: justify;
}

.skills {
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    border-bottom: thick double black;
    margin-left: 5rem;
    margin-right: 5rem;
    padding-bottom: 3rem;
}

.skills p {
    text-align: justify;
}

.awards {
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    margin-left: 5rem;
    margin-right: 5rem;
    padding-bottom: 3rem;
}

.awards p {
    text-align: center;
    padding-bottom: 2rem;
}

  .accordion {
    width: 70%;
    margin: 90px auto;
    margin-top: 10px;
    color: black;
    padding: 45px 45px;
    font-family: 'Roboto Condensed', sans-serif;
  }

  .label {

    text-align: center;
    font-weight: bold;
    font-size: larger;
    background-color: #000b82;
    color: white;
    padding: 1rem;
  }

  .label:hover {
    background-color: #030730;
    transition: .5s;
  }

  .content {
    padding: 1rem;
    background-color: white;
    display: none;
    overflow: hidden;
  }


  ::selection {
    color: white;
    background-color:brown;
  }

  #ProfilePic {
    padding: 3rem;
    margin: 3rem;
    width: 30%;
    height: 30%;
  }

  .container-divider {
    margin: 0;
    padding: 0;
  }

